# gzipt

./: .gitignore  README.md  css_experiment.py  experiments.py  gzipt.py  hellaswag.py  pyproject.toml  render_css.py  retrieval.py  sql_chinook.py  sql_experiment.py
gzipt/: __init__.py  cli.py  model.py
tests/: test_gzipt.py
